# nk-network-cell-modelling-console

./: Makefile  README  config.status  configure  configure.ac
autom4te.cache/: output.0  traces.0  traces.1
data/SavedAutomata/N_05_K_02/000/: automata.txt
data/SavedAutomata/N_05_K_02/001/: automata.txt
src/: Makefile  Makefile.am  Makefile.in  main.py  nk-network-cell-modelling.in  nk-network-cell-modelling.in.bak
src/cell_modelling/: drawgraph.py
